force-app/main/default/objects/field__mdt/field__mdt.object-meta.xml
<CustomObject>
    <label>field</label>
    <pluralLabel>fields</pluralLabel>
</CustomObject>