force-app/main/default/objects/field__mdt/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <label>object</label>
    <referenceTo>object__mdt</referenceTo>
    <relationshipLabel>fields</relationshipLabel>
    <relationshipName>fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>