force-app/main/default/objects/field__mdt/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <label>position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>